--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM node:10.18.0-alpine
+FROM node:lts-alpine
 
 RUN mkdir -p /usr/app
 WORKDIR /usr/app
@@ -10,4 +10,4 @@ COPY . ./
 
 EXPOSE 3000
 
-CMD npm start
+CMD npm run dev
