--- a/package.json
+++ b/package.json
@@ -6,44 +6,45 @@
   "scripts": {
     "prestart": "tsoa swagger-and-routes",
     "predebug": "tsoa swagger-and-routes",
-    "start": "nodemon src/server.ts",
+    "start": "ts-node src/server.ts",
     "debug": "nodemon --exec node --inspect=0.0.0.0:9229 --require ts-node/register src/server.ts",
+    "dev": "npm run debug",
     "generate": "tsoa swagger-and-routes",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "log4js": "^6.1.0",
-    "mongoose": "^5.9.3",
+    "log4js": "^6.2.1",
+    "mongoose": "^5.9.10",
     "mongoose-paginate": "^5.0.3",
-    "spdy": "^4.0.1",
-    "swagger-ui-express": "^4.1.2",
-    "ts-node": "^8.5.4",
-    "tsoa": "^2.5.10",
+    "spdy": "^4.0.2",
+    "swagger-ui-express": "^4.1.4",
+    "ts-node": "^8.9.0",
+    "tsoa": "^2.5.14",
     "typescript": "^3.7.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.2",
+    "@types/express": "^4.17.6",
     "@types/jest": "^24.9.1",
-    "@types/jsonwebtoken": "^8.3.8",
-    "@types/mongoose": "^5.7.3",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/mongoose": "^5.7.12",
     "@types/mongoose-paginate": "^5.0.8",
-    "@types/node": "^12.12.29",
+    "@types/node": "^12.12.37",
     "@types/spdy": "^3.4.4",
     "@types/supertest": "^2.0.8",
-    "@types/swagger-ui-express": "^4.1.1",
-    "jest": "^24.9.0",
-    "nodemon": "^2.0.2",
+    "@types/swagger-ui-express": "^4.1.2",
+    "jest": "^25.4.0",
+    "nodemon": "^2.0.3",
     "supertest": "^4.0.2",
     "ts-jest": "^24.3.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/leonardocartaxo/ts-node-boilerplate.git%1B%5BH.git"
+    "url": ""
   },
   "keywords": [
     "node",
@@ -56,10 +57,7 @@
     "http2",
     "spdy"
   ],
-  "author": "Leonardo Cartaxo",
+  "author": "J K",
   "license": "GPL 3",
-  "bugs": {
-    "url": "https://github.com/leonardocartaxo/ts-node-boilerplate.git%1B%5BH/issues"
-  },
-  "homepage": "https://github.com/leonardocartaxo/ts-node-boilerplate.git%1B%5BH#readme"
+  "homepage": ""
 }
