--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
+language: node_js
+node_js:
+  - lts
 sudo: required
 services:
   - docker
+  - mongodb
 
 before_install:
 # not sure if should build with docker here or just 
-#  - docker build -t $DOCKER_ID/ts-node-boilerplate -f ./Dockerfile.dev ./
+  - docker build -t $DOCKER_ID/ts-node-boilerplate -f ./Dockerfile.dev ./
 
 # perhaps we need to install a new version of docker-compose
 # for now just show the current version
@@ -15,10 +19,11 @@ install:
 #   - docker-compose -f docker-compose.test.yml up --build
 
 script:
-    - docker-compose -f docker-compose.test.yml up --build
+#    - docker-compose -f docker-compose.test.yml up --build
+- docker run -e CI=true $DOCKER_ID/ts-node-boilerplate npm test -- --coverage
 
-after_script:
-  - docker-compose -f docker-compose.test.yml down
+#after_script:
+#  - docker-compose -f docker-compose.test.yml down
 
 after_success:
   - docker build -f Dockerfile.prod -t $DOCKER_ID/ts-node-boilerplate ./
