--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 sudo: required
 services:
   - docker
-  - mongo
+  - mongodb
 
 before_install:
 # not sure if should build with docker here or just 
@@ -21,7 +21,11 @@ install:
 script:
 #    - docker-compose -f docker-compose.test.yml up --build
 # env variable CI=true is always available in Travis CI
-- docker run $DOCKER_ID/ts-node-boilerplate npm test -- --coverage
+#- docker run $DOCKER_ID/ts-node-boilerplate npm test -- --coverage
+# far from ideal: tests should be run in their own container,
+# using docker-compose.test.yml which should exit on success.
+# the test suite exits, the test_1 image exits but the mongodb does not exit
+npm run test
 
 #after_script:
 #  - docker-compose -f docker-compose.test.yml down
