--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -7,6 +7,7 @@ services:
       context: .
     environment:
       - DB_HOST=database
+      - CI=true
     depends_on:
       - database
     command: npm run test
