--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "debug": "nodemon --exec node --inspect=0.0.0.0:9229 --require ts-node/register src/server.ts",
     "dev": "npm run debug",
     "generate": "tsoa swagger-and-routes",
-    "test": "jest"
+    "test": "jest --forceExit --detectOpenHandles --coverage"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
-    "@types/jest": "^24.9.1",
+    "@types/jest": "24.9.0",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mongoose": "^5.7.12",
     "@types/mongoose-paginate": "^5.0.8",
@@ -37,10 +37,10 @@
     "@types/spdy": "^3.4.4",
     "@types/supertest": "^2.0.8",
     "@types/swagger-ui-express": "^4.1.2",
-    "jest": "^25.4.0",
+    "jest": "24.9.0",
     "nodemon": "^2.0.3",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.3.0"
+    "ts-jest": "24.3.0"
   },
   "repository": {
     "type": "git",
